Closed Bug 1079573 Opened 10 years ago Closed 10 years ago

Builds are going to burn when Gecko 35 merges to Aurora

Categories

(Core :: DOM: Content Processes, defect)

defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla35
Tracking Status
firefox35 + verified

People

(Reporter: RyanVM, Assigned: jimm)

References

Details

Attachments

(1 file)

Merge day is on Monday, so please fix or backout ASAP.

https://treeherder.mozilla.org/ui/logviewer.html#?job_id=2278303&repo=try

/builds/slave/try-lx-00000000000000000000000/build/toolkit/xre/nsAppRunner.cpp: In function 'bool mozilla::BrowserTabsRemoteAutostart()':
/builds/slave/try-lx-00000000000000000000000/build/toolkit/xre/nsAppRunner.cpp:4667:7: error: 'prefEnabled' was not declared in this scope
/builds/slave/try-lx-00000000000000000000000/build/toolkit/xre/nsAppRunner.cpp:4579:8: warning: unused variable 'trialPref' [-Wunused-variable]
/builds/slave/try-lx-00000000000000000000000/build/toolkit/xre/nsAppRunner.cpp: At global scope:
/builds/slave/try-lx-00000000000000000000000/build/toolkit/xre/nsAppRunner.cpp:4561:1: warning: 'void LogE10sBlockedReason(const char*)' defined but not used [-Wunused-function]
make[6]: *** [nsAppRunner.i_o] Error 1
Flags: needinfo?(jmathies)
[Tracking Requested - why for this release]:
It will cause bustage if not fixed before the merge to Aurora.
Attached patch patchSplinter Review
Comment on attachment 8502605 [details] [diff] [review]
patch

shift prefEnabled definition up above the #if, and cleanup commenting.
Attachment #8502605 - Flags: review?(dtownsend+bugmail)
Attachment #8502605 - Flags: review?(dtownsend+bugmail) → review+
https://hg.mozilla.org/mozilla-central/rev/ecf7c54a9dce
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.