Bug 1079573 - Fix for BrowserTabsRemoteAutostart prefEnabled boolean defined out of scope in non-nightly builds. r=mossop